# ipclib

./: HLint.hs  LICENSE  README  ipclib.cabal  ipclib.riot
Eba/: Eba.hs  Main.hs
Eba/tests/simple/: MM-ode.ptree  MM.biopepa  MM.ptree  MMR-ode.ptree  MMR.biopepa  MMR.ptree  birthdeath.biopepa  birthdeath.ptree  calcium.biopepa  genetic_network2.biopepa  one.biopepa
Gipc/: DrawGraph.hs  Main.hs  gipc.glade
Ipc/: Cli.hs  CliDoc.hs  CliParsers.hs  DrawGraph.hs  Ipc.hs  Main.hs
Language/: Pepa.hs
Language/BioPepa/: OdesTranslate.hs  Parser.hs  PepaTranslate.hs  Print.hs  Syntax.hs
Language/Dizzy/: Print.hs  Syntax.hs
Language/Fsp/: Print.hs  Syntax.hs
Language/Hydra/: Analysis.hs  Options.hs  Parser.hs  Print.hs  Syntax.hs  Transform.hs
Language/Pepa/: ApparentRates.hs  FileParser.hs  Generate.hs  MainControl.hs  Parser.hs  PepaUtils.hs  Print.hs  PrivateTokenParser.hs  QualifiedName.hs  Rates.hs  Rates.hs-darcs-backup0  Syntax.hs  Utils.hs
Language/Pepa/Analysis/: Analysis.hs  FixMap.hs  Typing.hs
Language/Pepa/Compile/: Dizzy.hs  EmbeddedMarkov.hs  EstimateSize.hs  Fsp.hs  GenMatrix.hs  Hierarchical.hs  Hydra.hs  JavaSimulator.hs  MarkovChain.hs  Model.hs  Odes.hs  PartEval.hs  Pddl.hs  Prism.hs  StateMap.hs  States.hs  TimedSystemEquation.hs  Uniformise.hs
Language/Pepa/Ode/: OdeGeneration.hs  RateEquations.hs  TimedSystemEquation.hs
Language/Pepa/Pepato/: OutputParser.hs
Language/Pepa/Probes/: AddProbes.hs  Parser.hs  Syntax.hs  Translate.hs
Language/Pepa/Srmc/: Parser.hs  Print.hs  SrmcPepa.hs  Syntax.hs
Language/Pepa/Transform/: HideAll.hs  NameSupply.hs  Replace.hs  Simplify.hs
Language/Prism/: Print.hs  Syntax.hs
Language/Ptrees/: Against.hs  CandleStick.hs  DataBase.hs  Evaluate.hs  Parser.hs  Print.hs  Syntax.hs  TimeSeries.hs
Smc/: Cli.hs  CliDoc.hs  DataBase.hs  Smc.hs  SmcGraph.hs
Test/: Main.hs
Test/passage/: test01.ptree
Test/passage/results/: test01-cdf.csv
doc/common/: pepa.bib
doc/ipc/: Makefile  ipcdevmanual.tex  ipcmanual.tex  ipctutorial.tex  macros.tex  main.tex  options.tex  simpleTea-steady-output
doc/ipc/models/: Makefile  boiler.pepa  curve.gp  make-simpletea-cdf-pdf-graphs.sh  simpleTea.exper  simpleTea.gp  simpleTea.pepa  tiny.exper  tiny.pepa
doc/pepaprobe/: Makefile  pepaprobemanual.tex
doc/srmc/: Makefile  concreteSyntax.tex  srmc.sty  srmcmanual.tex  srmctutorial.tex
doc/srmc/models/: barroom1.pepa
examples/: PepaCheck.hs  PepaDizzy.hs  PepaOde.hs  PepaProbe.hs  PepaSimplify.hs  PepaTimed.hs
examples/PepaLatex/: PepaLatex.hs  Setup.hs  pepalatex.cabal
examples/PepaLatex/Language/Pepa/: Latex.hs
peped/: Peped.hs  peped.cabal
size/: Sizes.hs
tests/: RunTests.hs
tests/aggregation/good/: clientServer.pepa  simple.pepa  two_ways_sync.pepa  varconcs.pepa  ws-3-3-2-2.pepa
tests/analysis/bad/: alias_self_loop.pepa  brutal_self_loop.pepa  mutual_self_loop.pepa  mutual_self_loop2.pepa  self_loop.pepa  sflous.pepa  sum_self_loop.pepa  tiny.pepa  unusedprocess.pepa  zerorate.pepa
tests/analysis/good/: no_self_loop.pepa  sflous.pepa  tiny.pepa  zerorate.pepa
tests/basic/bad/: test01.pepa  test02.pepa  test03.pepa  test04.pepa  test05.pepa  test06.pepa  test07.pepa  test08.pepa  test09.pepa  test10.pepa  test11.pepa  test12.pepa  test13.pepa  test14.pepa  test15.pepa  test16.pepa  test17.pepa  test18.pepa  test20.pepa  test21.pepa  test22.pepa  test23.pepa  test24.pepa  test25.pepa  test30.pepa  test40.pepa  test41.pepa  test50.pepa  test51.pepa  test52.pepa  test53.pepa  test54.pepa  (+7 more)
tests/examples/: finance.pepa  sensor.pepa  sensor2.pepa  tp2.pepa
tests/experiment/: small.exper
tests/functional_rates/: barman.pepa  barman.wo.fr.pepa
tests/misc/: PQ.pepa  bar.pepa  coop_array.pepa  crosstalk.pepa  crosstalk.simple.pepa  dynprioritise.pepa  hops.pepa  ieee802_11.pepa  mult_arrays_sum.pepa  multiple_arrays.pepa  needham_schroeder.pepa  priorities.pepa  prioritysyntax.pepa  probe_test.pepa  probe_test.result.pepa  sanity.pepa  sanity_one.pepa  sequence.pepa  servicebreak.pepa  simple_cond_rate.pepa  sir.pepa  sir.ptree  t01.pepa  t02.pepa  tiny.pepa  translated_coop_array.pepa  translated_multiple_arrays.pepa  unreliable_machine.core.pepa  unreliable_machine.fr.pepa
tests/ode-response/: get-loan-steady.ptree  get-loan.csv  get-loan.pepa  get-loan.ptree  procres.pepa  procres.ptree  web-ctmc.-cdf.csv  web-ctmc.-pdf.csv  web-ctmc.pepa  web-fun-rates.csv  web-fun-rates.pepa  web-fun-rates.ptree  web-java-sim.pepa  web-multiple-java-sim.pepa  web.pepa  web.ptree  web2.csv  web2.pepa  web2.ptree  web3.pepa  web3.ptree  web4.pepa  web4.ptree  web5.csv  web5.pepa  web5.ptree  webjavasim-cdf.csv  webjavasim.java  webjavasimman.java  webmultiplejavasim-cdf.csv  webmultiplejavasim.java  webmultiplejavasimman-cdf.csv  webmultiplejavasimman.java
tests/ptrees/: let_plot_experiment.ptree  plot_experiment.ptree  plot_map.ptree  plot_map_transform.ptree  probe_model.ptree  simple_passage.ptree  simple_plot.ptree  simple_steady.ptree  simple_transient.ptree  times_passage.ptree  transform_model.ptree  transform_through.ptree
tests/queues/: new.pepa  traditional.pepa
tests/quickcheck/: Properties.hs
tests/sensoria/: bowling.pepa  bowling.ptree
tests/transform/: array.pepa  coop.pepa  simple.pepa
users/fatemeh/: test1.pepa
users/jie-ding/: ICC2009_T.INFO  ICC2009_T.MATRIX  ICC2009_T.OPTIONS  ICC2009_T.STATE  ICC2009_T.STEADY  ICC2009_T.TARGETS  ICC2009_T.WEIGHT  ICC2009_T.cdf.csv  ICC2009_T.gen  ICC2009_T.gspn-target  ICC2009_T.mod  ICC2009_T.pdf.csv  ICC2009_T.pepa  ICC2009_T.perf  ICC2009_T.user.cxx  curve.gp  curve1.csv  curve2.csv  curve3.csv  curve6.csv  number_pdes.ptree  pdes.sh  plot_experiment.csv  plot_experiment.ptree  r_am_assimilation.csv  r_am_assimilation.ptree  r_am_decision.csv  r_am_decision.ptree  r_ca_adaption.csv  r_ca_adaption.ptree
users/nthomas/: non-repud.pepa  non-repud.ptree
web/: ipclib.html  pepacheck  pepalatex  pepaprobe
web/interface/: IpcWeb.hs
web/ipc/: index.html  pepa2html.css  style.css
web/ipc_web_gen/: IpcWeb.hs  Setup.hs  ipcweb.cabal
(+133 files in other folders)
